# pdfsplitter

./: .gitignore  README.md  main.py  pyproject.toml
frontend/: bun.lockb  package.json  vite.config.ts
frontend/src/: App.tsx
scripts/: deploy.sh  test_split.sh  test_upload.sh
