[project]
name = "splitter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "formalpdf==0.1.5",
    "modal>=1.1.4",
    "pydantic>=2.11.9",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]
